feat:add lessons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Barattson", "Foud", "reduxjs", "webp"]
+  "cSpell.words": [
+    "Barattson",
+    "fontawesome",
+    "fortawesome",
+    "Foud",
+    "reduxjs",
+    "webp"
+  ]
 }
