--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-js": "^3.4.0",
     "bootstrap": "^5.3.2",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
