--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.11",
+    "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.16.0",
