--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.4",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.11",
     "react-icons": "^5.3.0",
